feat: refactor, with swagger
