# controllers/profile.go
@@ -6,6 +6,14 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @Summary Get Profile
+// @Description Returns a JSON with the username that requested it
+// @Tags Profile
+// @Accept json
+// @Produce json
+// @Success 200 {object} map[string]interface{}
+// @Security Bearer
+// @Router /profile [get]
 func Profile() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		username := c.GetString("username")
